# GIL

./: .gitignore  .goreleaser.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PRIVACY.md  README.md  SECURITY.md  go.work
.github/workflows/: release.yml
cli/: go.mod  go.sum
cmd/edge-check/: main.go
core/: go.mod  go.sum
core/checkpoint/: shadow.go  shadow_test.go
core/cliutil/: error.go  error_test.go
core/compact/: cache.go  cache_test.go  compactor.go  compactor_test.go  history.go  history_test.go  template.go  template_test.go
core/cost/: calculator.go  calculator_test.go  catalog.go  catalog_test.go  default_catalog.json
core/credstore/: file.go  file_test.go  store.go
core/edit/: match.go  match_test.go  parser.go  parser_test.go  similar.go  similar_test.go
core/event/: event.go  persist.go  persist_test.go  secret.go  secret_test.go  stream.go  stream_test.go
core/exec/: exectool.go  exectool_test.go  recipe.go  runner.go  runner_test.go
core/instructions/: discover.go  discover_test.go
core/intent/: classifier.go  classifier_test.go  conversation.go  conversation_test.go
core/interview/: adversary.go  adversary_test.go  audit.go  audit_test.go  engine.go  engine_test.go  slotfill.go  slotfill_test.go  state.go  state_test.go
core/lsp/: client.go  client_test.go  manager.go  manager_test.go  mockserver_test.go  server.go  types.go
core/mcp/: client.go  client_test.go  tool.go
core/mcpregistry/: registry.go  registry_test.go
core/memory/: bank.go  bank_test.go
core/notify/: config.go  config_test.go  notify.go  notify_test.go
core/patch/: apply.go  apply_test.go  parser.go  parser_test.go  seek.go  seek_test.go  types.go
core/paths/: migrate.go  migrate_test.go  xdg.go  xdg_test.go
core/permission/: evaluator.go  evaluator_store.go  evaluator_test.go  from_spec.go  from_spec_test.go  store.go  wildcard.go  wildcard_test.go
core/plan/: plan.go  store.go  store_test.go
core/provider/: anthropic.go  anthropic_test.go  mock.go  mock_test.go  openai.go  openai_test.go  provider.go  retry.go  retry_failure_injection_test.go  retry_test.go
core/repomap/: fit.go  fit_test.go  pagerank.go  pagerank_test.go  parser.go  parser_test.go  walker.go  walker_test.go
core/runner/: runner.go  runner_budget_test.go  runner_plan_test.go  runner_split_test.go  runner_subagent_test.go  runner_test.go  system_prompt.go  system_prompt_test.go
core/session/: repo.go  repo_test.go  schema.go  schema_test.go
core/slash/: handlers.go  handlers_test.go  parser.go  parser_test.go  registry.go
core/spec/: spec.go  spec_test.go
core/specstore/: store.go  store_test.go
core/stuck/: detector.go  detector_test.go  recovery.go  recovery_test.go
core/tool/: applypatch.go  applypatch_test.go  bash.go  bash_test.go  clarify.go  clarify_test.go  compact.go  compact_test.go  edit.go  edit_test.go  file.go  file_test.go  lsp.go  lsp_test.go  memory.go  memory_test.go  plan.go  repomap.go  (+9 more)
docs/: USER_GUIDE.md  design.md  distribution.md  install.md  progress.md
mcp/: go.mod  go.sum
proto/: buf.gen.yaml  buf.yaml  go.mod  go.sum
python/gil_atropos/: README.md  __init__.py  cli.py  compile_protos.py  env.py  grpc_client.py  pyproject.toml  samples.py
python/gil_atropos/proto/: __init__.py
python/gil_atropos/tests/: test_smoke.py
python/gil_swebench/: README.md  __init__.py  cli.py  compile_protos.py  grpc_client.py  pyproject.toml  runner.py  score.py  task.py
python/gil_swebench/fixtures/: smoke.jsonl
python/gil_swebench/proto/: __init__.py
python/gil_swebench/tests/: test_smoke.py
runtime/: go.mod  go.sum
scripts/: install.sh  soak.sh
sdk/: client.go  client_test.go  go.mod  go.sum
server/: go.mod  go.sum
tui/: go.mod  go.sum
vscode/: .vscodeignore  LICENSE  PACKAGING.md  README.md  esbuild.mjs  package-lock.json  package.json  tsconfig.json
(+261 files in other folders)
